# mymom-health

./: .bazelignore  .bazelrc  .buildifier.json  .gitignore  .pw_console.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  OWNERS  README.md  WORKSPACE  pigweed.json
.github/workflows/: postsubmit.yaml  presubmit.yaml
applications/blinky/: BUILD.bazel  main.cc
apps/blinky/: BUILD.bazel  blinky.proto  main.cc
apps/factory/: BUILD.bazel  factory.proto  main.cc  service.cc  service.h
apps/production/: BUILD.bazel  main.cc  threads.h
device/: BUILD.bazel  bme688.cc  bme688.h  bme68x.BUILD.bazel  ltr559_light_and_prox_sensor.cc  ltr559_light_and_prox_sensor.h  pico_board.cc  pico_board.h  pico_led.cc  pico_led.h  pico_pwm_gpio.cc  pico_pwm_gpio.h  pwm_gpio.cc  pwm_gpio.h  rgb_led.cc  rgb_led.h
drivers/: BUILD.bazel  system.cc  system.h
libraries/pw_board_led/: BUILD.bazel
libraries/pw_board_led_host/: BUILD.bazel
libraries/pw_board_led_rp2040/: BUILD.bazel
libraries/rpc/: BUILD.bazel  rp2040_system.options  rp2040_system.proto
libraries/rpc/public/rp2040_system/: rp2040_system_service_pwpb.h
modules/air_sensor/: BUILD.bazel  README.md  air_sensor.cc  air_sensor.h  air_sensor.proto  air_sensor_fake.h  air_sensor_test.cc  service.cc  service.h
modules/blinky/: BUILD.bazel  blinky.cc  blinky.h  blinky.proto  blinky_test.cc  service.cc  service.h
modules/board/: BUILD.bazel  board.h  board.proto  board_fake.cc  board_fake.h  service.cc  service.h
modules/buttons/: BUILD.bazel  manager.cc  manager.h  manager_test.cc
modules/color_rotation/: BUILD.bazel  manager.cc  manager.h  manager_test.cc
modules/edge_detector/: BUILD.bazel  hysteresis_edge_detector.cc  hysteresis_edge_detector.h  hysteresis_edge_detector_test.cc  pubsub.h
modules/event_timers/: BUILD.bazel  README.md  event_timers.h
modules/indicators/: BUILD.bazel  system_led.cc  system_led.h  system_led_host.cc  system_led_rp2040.cc  system_led_testing.cc  system_led_testing.h
modules/led/: BUILD.bazel  README.md  digital_io_fake.cc  digital_io_fake.h  monochrome_led.cc  monochrome_led.h  monochrome_led_fake.cc  monochrome_led_fake.h  polychrome_led.cc  polychrome_led.h  polychrome_led_fake.cc  polychrome_led_fake.h
modules/lerp/: BUILD.bazel  lerp.h  lerp_test.cc
modules/light/: BUILD.bazel  fake_sensor.h  sensor.h
modules/morse_code/: BUILD.bazel  README.md  encoder.cc  encoder.h  encoder_test.cc  morse_code.options  morse_code.proto  service.cc  service.h
modules/proximity/: BUILD.bazel  fake_sensor.h  manager.cc  manager.h  sensor.h
modules/pubsub/: BUILD.bazel  pubsub.h  pubsub.proto  pubsub_events.h  pubsub_events_test.cc  pubsub_test.cc  service.cc  service.h  service_test.cc
modules/pw_board_led/: BUILD.bazel
modules/pw_board_led_host/: BUILD.bazel
modules/pw_board_led_rp2040/: BUILD.bazel
modules/pwm/: BUILD.bazel  README.md  digital_out.cc  digital_out.h  digital_out_fake.cc  digital_out_fake.h
modules/rpc/: BUILD.bazel  rp2040_system.proto  system.proto  system_service.cc  system_service.h
modules/rpc/public/rp2040_system/: rp2040_system_service_nanopb.h
modules/sampling_thread/: BUILD.bazel  sampling_thread.cc  sampling_thread.h
modules/state_manager/: BUILD.bazel  common_base_union.h  service.cc  service.h  state_manager.cc  state_manager.h  state_manager.options  state_manager.proto  state_manager_test.cc
modules/stats/: BUILD.bazel  simple_moving_average.h  simple_moving_average_test.cc
modules/testing/: BUILD.bazel  work_queue.cc  work_queue.h
modules/timer_future/: timer_future.cc  timer_future.h
modules/worker/: BUILD.bazel  test_worker.cc  test_worker.h  worker.h
system/: BUILD.bazel  pubsub.cc  pubsub.h  system.h  worker.cc  worker.h
targets/: BUILD.bazel  transition.bzl
targets/host/: BUILD.bazel  boot.cc  led.cc  production_app_threads.cc  stream_channel.cc  stream_channel.h  system.cc
targets/rp2/: BUILD.bazel  binary.bzl  device_handler.cc  enviro_pins.h  led.cc  system.cc  unit_test_rpc_main.cc
targets/rp2040/: BUILD.bazel  binary.bzl  boot.cc  enviro_pins.h  led.cc  production_app_threads.cc  system.cc
targets/rp2040/config/: FreeRTOSConfig.h
tools/: BUILD.bazel  tools.bzl
tools/airmaranth/: air_measure.py  console.py  device.py  example_script.py  factory.py  toggle_blinky.py
tools/sense/: air_measure.py  console.py  device.py  example_script.py  factory.py  toggle_blinky.py
tools/showcase_tools/: console.py
web_app/: .eslintrc.cjs  .gitignore  README.md  copy_protos.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web_app/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
web_app/src/common/: rpcService.ts  state.ts  status.ts
web_app/src/components/: airquality.tsx  header.tsx  hero.tsx  humidity.tsx  temperature.tsx
