# Copyright 2024 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "bme688",
    srcs = ["bme688.cc"],
    hdrs = ["bme688.h"],
    deps = [
        "//modules/air_sensor",
        "//modules/worker",
        "@bme68x_sensor_api//:bme68x",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_chrono:system_timer",
        "@pigweed//pw_i2c:initiator",
        "@pigweed//pw_i2c:register_device",
        "@pigweed//pw_log",
        "@pigweed//pw_status",
    ],
    implementation_deps = [
        "@pigweed//pw_assert",
        "@pigweed//pw_bytes",
        "@pigweed//pw_function",
        "@pigweed//pw_log",
        "@pigweed//pw_span",
        "@pigweed//pw_thread:sleep",
    ],
)

cc_library(
    name = "pico_board",
    srcs = ["pico_board.cc"],
    hdrs = ["pico_board.h"],
    deps = [
        "//modules/board",
        "@pico-sdk//src/common/pico_stdlib:pico_stdlib",
        "@pico-sdk//src/rp2_common/hardware_adc",
        "@pico-sdk//src/rp2_common/pico_bootrom",
    ],
)

cc_library(
    name = "pico_led",
    srcs = ["pico_led.cc"],
    hdrs = ["pico_led.h"],
    deps = [
        ":pwm_gpio",
        "//modules/led:monochrome_led",
        "@pico-sdk//src/common/pico_stdlib:pico_stdlib",
        "@pico-sdk//src/rp2_common/hardware_gpio",
        "@pigweed//pw_digital_io_rp2040",
    ],
)

cc_library(
    name = "pwm_gpio",
    srcs = ["pwm_gpio.cc"],
    hdrs = ["pwm_gpio.h"],
    deps = [
        "//modules/led:monochrome_led",
        "@pico-sdk//src/common/pico_stdlib:pico_stdlib",
        "@pico-sdk//src/rp2_common/hardware_gpio",
        "@pico-sdk//src/rp2_common/hardware_irq",
        "@pico-sdk//src/rp2_common/hardware_pwm",
        "@pigweed//pw_assert",
        "@pigweed//pw_chrono:system_clock",
        "@pigweed//pw_digital_io",
        "@pigweed//pw_log",
    ],
)

cc_library(
    name = "rgb_led",
    srcs = ["rgb_led.cc"],
    hdrs = ["rgb_led.h"],
    deps = [
        ":pwm_gpio",
        "//modules/led:polychrome_led",
        "@pigweed//pw_log",
    ],
)
