# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "sense_lib",
    srcs = [
        "sense/__init__.py",
        "sense/air_measure.py",
        "sense/device.py",
        "sense/example_script.py",
        "sense/toggle_blinky.py",
    ],
    imports = ["."],
    deps = [
        "//apps/factory:py_pb2",
        "//modules/air_sensor:py_pb2",
        "//modules/blinky:py_pb2",
        "//modules/board:py_pb2",
        "//modules/morse_code:py_pb2",
        "//modules/pubsub:py_pb2",
        "@pigweed//pw_protobuf:common_py_pb2",
        "@pigweed//pw_rpc:echo_py_pb2",
        "@pigweed//pw_system/py:pw_system_lib",
    ],
)

py_binary(
    name = "console",
    srcs = ["sense/console.py"],
    deps = [":sense_lib"],
)

py_binary(
    name = "example_script",
    srcs = ["sense/example_script.py"],
    deps = [":sense_lib"],
)

py_binary(
    name = "toggle_blinky",
    srcs = ["sense/toggle_blinky.py"],
    deps = [":sense_lib"],
)

py_binary(
    name = "air_measure",
    srcs = ["sense/air_measure.py"],
    deps = [":sense_lib"],
)

py_binary(
    name = "factory",
    srcs = ["sense/factory.py"],
    deps = [
        ":sense_lib",
        "@pigweed//pw_cli/py:pw_cli",
    ],
)
